@@ -2,7 +2,7 @@
 // vim: sw=8 ts=8
 
 char const *cvs_name = "$Name:  $";
-char const *cvs_id_cli = "$Id: cli.c,v 1.65 2005-08-10 07:53:56 bodea Exp $";
+char const *cvs_id_cli = "$Id: cli.c,v 1.66 2005-09-01 06:59:06 bodea Exp $";
 
 #include <stdio.h>
 #include <stdarg.h>
@@ -1938,7 +1938,7 @@ int regular_stuff(struct cli_def *cli)
 		if (!show) continue;
 
 		if (!(p = strchr(m, '\n')))
-			p = m + strlen(p);
+			p = m + strlen(m);
 
 		cli_error(cli, "\r%s-%u-%u %.*s",
 			debug_levels[(int)ringbuffer->buffer[i].level],
