@@ -1,6 +1,7 @@
-* Wed Aug 31 2005 Brendan O'Dea <bod@optus.net> 2.1.5
+* Thu Sep 1 2005 Brendan O'Dea <bod@optus.net> 2.1.5
 - Avoid Code-Reject loop.
 - Increase size of PPP buffers to MAXETHER.
+- Bug fixes for CLI ringbuffer and tunnel HELLO from Yuri.
 
 * Mon Aug 29 2005 Brendan O'Dea <bod@optus.net> 2.1.4
 - Drop level of "Unexpected CHAP message" log.
